--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<!-- saved from url=(0052)file:///D:/CV/1/Kickresume_files/saved_resource.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title></title>
+    <title>Nam Nguyen - Full-stack</title>
     <link rel="stylesheet" href="./index_files/ionicons.css">
     <link rel="stylesheet" href="./index_files/fontastic.css">
     <link rel="stylesheet" type="text/css" href="./index_files/slick.min.css">
